// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anatomogram switcher matches snapshot for anolis_carolinensis 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
/>
`;

exports[`Anatomogram switcher matches snapshot for arabidopsis_thaliana 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
/>
`;

exports[`Anatomogram switcher matches snapshot for bos_taurus 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
/>
`;

exports[`Anatomogram switcher matches snapshot for brachypodium_distachyon 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
>
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/selected_whole_plant.png"
  />
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/unselected_flower_parts.png"
  />
</div>
`;

exports[`Anatomogram switcher matches snapshot for gallus_gallus 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
/>
`;

exports[`Anatomogram switcher matches snapshot for homo_sapiens 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
>
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/selected_brain.png"
  />
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/unselected_female.png"
  />
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/unselected_male.png"
  />
</div>
`;

exports[`Anatomogram switcher matches snapshot for hordeum_vulgare 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
>
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/selected_whole_plant.png"
  />
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/unselected_flower_parts.png"
  />
</div>
`;

exports[`Anatomogram switcher matches snapshot for macaca_mulatta 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
/>
`;

exports[`Anatomogram switcher matches snapshot for monodelphis_domestica 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
/>
`;

exports[`Anatomogram switcher matches snapshot for mus_musculus 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
>
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/selected_brain.png"
  />
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/unselected_female.png"
  />
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/unselected_male.png"
  />
</div>
`;

exports[`Anatomogram switcher matches snapshot for oryza_sativa 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
>
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/selected_whole_plant.png"
  />
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/unselected_flower_parts.png"
  />
</div>
`;

exports[`Anatomogram switcher matches snapshot for papio_anubis 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
/>
`;

exports[`Anatomogram switcher matches snapshot for rattus_norvegicus 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
/>
`;

exports[`Anatomogram switcher matches snapshot for solanum_lycopersicum 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
>
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/selected_whole_plant.png"
  />
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/unselected_flower_parts.png"
  />
</div>
`;

exports[`Anatomogram switcher matches snapshot for solanum_tuberosum 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
/>
`;

exports[`Anatomogram switcher matches snapshot for sorghum_bicolor 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
>
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/selected_whole_plant.png"
  />
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/unselected_flower_parts.png"
  />
</div>
`;

exports[`Anatomogram switcher matches snapshot for tetraodon_nigroviridis 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
/>
`;

exports[`Anatomogram switcher matches snapshot for triticum_aestivum 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
>
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/selected_whole_plant.png"
  />
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/unselected_flower_parts.png"
  />
</div>
`;

exports[`Anatomogram switcher matches snapshot for xenopus_tropicalis 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
/>
`;

exports[`Anatomogram switcher matches snapshot for zea_mays 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "maxWidth": "32px",
      "verticalAlign": "top",
      "width": "10%",
    }
  }
>
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/selected_whole_plant.png"
  />
  <img
    className="gxa-selection-icon"
    onClick={[Function]}
    src="img/unselected_flower_parts.png"
  />
</div>
`;
